--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<link rel="icon" href="favicon.png" type="image/png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TX-linor, AP och CNN</title>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <style>
+
+<!-- saved from url=(0035)https://exptool.github.io/explinor/ -->
+<html lang="en"><head><meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+<link href="https://exptool.github.io/explinor/favicon.png" rel="icon" type="image/png"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>TX-linor, AP och CNN</title>
+<script src="./TX-linor, AP och CNN_files/hls.js@latest"></script>
+<style>
         body {
             margin: 0;
             padding: 0;
@@ -75,155 +75,130 @@
     </style>
 </head>
 <body>
-
 <div class="main-header">
     Förhandsvisning – Expressens TX-linor
 </div>
-
 <div class="video-container">
-    <!-- Spelare 1 -->
-    <div class="player">
-        <div class="player-headerTX">TX1</div>
-        <video controls muted loop>
-            <source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx1/playlist.m3u8" type="application/x-mpegURL">
+<!-- Spelare 1 -->
+<div class="player">
+<div class="player-headerTX">TX1</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/f4eda704-44fa-4a39-a33c-653e03341c37">
+<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx1/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-
-    <!-- Spelare 2 -->
-    <div class="player">
-        <div class="player-headerTX">TX2</div>
-        <video controls muted loop>
-            <source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx2/playlist.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
-
-    <!-- Spelare 3 -->
-    <div class="player">
-        <div class="player-headerTX">TX3</div>
-        <video controls muted loop>
-            <source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx3/playlist.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
-
-    <!-- Spelare 4 -->
-    <div class="player">
-        <div class="player-headerTX">TX4</div>
-        <video controls muted loop>
-            <source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx4/playlist.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
-
-    <!-- Spelare 5 -->
-    <div class="player">
-        <div class="player-headerTX">TX5</div>
-        <video controls muted loop>
-            <source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx5/playlist.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
-
-    <!-- Spelare 6 -->
-    <div class="player">
-        <div class="player-headerTX">TX6</div>
-        <video controls muted loop>
-            <source src="https://cdn0-03837-liveedge1.dna.ip-only.net/03837-liveedge1/smil:03837-tx6/playlist.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
 </div>
-	<div class="main-header">
+<!-- Spelare 2 -->
+<div class="player">
+<div class="player-headerTX">TX2</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/5d8b8cdc-11c1-4220-9222-5d168c66a472">
+<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx2/playlist.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+<!-- Spelare 3 -->
+<div class="player">
+<div class="player-headerTX">TX3</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/79d42965-8432-4c36-a181-3b714d172601">
+<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx3/playlist.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+<!-- Spelare 4 -->
+<div class="player">
+<div class="player-headerTX">TX4</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/93c83125-6b40-42d9-a64a-fdc919aa832a">
+<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx4/playlist.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+<!-- Spelare 5 -->
+<div class="player">
+<div class="player-headerTX">TX5</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/c67d2784-8715-4fcb-88d6-d27110d291b4">
+<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx5/playlist.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+<!-- Spelare 6 -->
+<div class="player">
+<div class="player-headerTX">TX6</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/4f7379f3-b20e-4cf4-a8f1-b40c3f4a9bfc">
+<source src="https://cdn0-03837-liveedge1.dna.ip-only.net/03837-liveedge1/smil:03837-tx6/playlist.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+</div>
+<div class="main-header">
 	Förhandsvisning – livelinor från CNN
 	</div>
-	
 <div class="video-container">
-        <!-- Spelare 7 -->
-    <div class="player">
-        <div class="player-headerCNN">CNN – Ins HD1</div>
-        <video controls muted loop>
-            <source src="https://newsource-live.warnermediacdn.com/hls/live/2005450/intl01/master.m3u8" type="application/x-mpegURL">
+<!-- Spelare 7 -->
+<div class="player">
+<div class="player-headerCNN">CNN – Ins HD1</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/1c6547d4-943f-4950-aac9-e39319ed0bf6">
+<source src="https://newsource-live.warnermediacdn.com/hls/live/2005450/intl01/master.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-
-    <!-- Spelare 8 -->
-    <div class="player">
-         <div class="player-headerCNN">CNN – Ins HD2</div>
-        <video controls muted loop>
-            <source src="https://newsource-live.warnermediacdn.com/hls/live/2005451/intl02/master.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
-
-    <!-- Spelare 9 -->
-    <div class="player">
-         <div class="player-headerCNN">CNN – Ins HD3</div>
-        <video controls muted loop>
-            <source src="https://newsource-live.warnermediacdn.com/hls/live/2005452/intl03/master.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
-        <!-- Spelare 10 -->
-    <div class="player">
-         <div class="player-headerCNN">CNN – Ins HD4</div>
-        <video controls muted loop>
-            <source src="https://newsource-live.warnermediacdn.com/hls/live/2005453/intl04/master.m3u8" type="application/x-mpegURL">
-            Din webbläsare stöder inte video-taggen.
-        </video>
-    </div>
 </div>
-	<div class="main-header">
+<!-- Spelare 8 -->
+<div class="player">
+<div class="player-headerCNN">CNN – Ins HD2</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/6358ece2-7feb-4838-aa3d-b534260f6d7f">
+<source src="https://newsource-live.warnermediacdn.com/hls/live/2005451/intl02/master.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+<!-- Spelare 9 -->
+<div class="player">
+<div class="player-headerCNN">CNN – Ins HD3</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/108260f3-cac6-4511-a6ee-53543bfb79a9">
+<source src="https://newsource-live.warnermediacdn.com/hls/live/2005452/intl03/master.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+<!-- Spelare 10 -->
+<div class="player">
+<div class="player-headerCNN">CNN – Ins HD4</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/6b18f9f2-36d6-454a-b036-e80a14ee060d">
+<source src="https://newsource-live.warnermediacdn.com/hls/live/2005453/intl04/master.m3u8" type="application/x-mpegURL"/>
+            Din webbläsare stöder inte video-taggen.
+        </video>
+</div>
+</div>
+<div class="main-header">
 	Förhandsvisning – livelinor från AP
 	</div>
-	
-	<div class="video-container">
-        <!-- Spelare 11 -->
-    <div class="player">
-        <div class="player-headerAP">AP Direkt</div>
-        <video controls muted loop>
-            <source src="https://streaming-a-806.cdn.nextologies.com/Ugg7ohj1KOol2v04/playlist.m3u8" type="application/x-mpegURL">
+<div class="video-container"><div class="player">
+<div class="player-headerAP">AP Direkt</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/44ba0347-a899-4298-9a53-7b674041c14a">
+<source src="https://streaming-a-806.cdn.nextologies.com/Ugg7ohj1KOol2v04/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-
-    <!-- Spelare 12 -->
-    <div class="player">
-        <div class="player-headerAP">AP live choice 1</div>
-        <video controls muted loop>
-            <source src="https://streaming-a-806.cdn.nextologies.com/4M2gqURXdsxuPj01/playlist.m3u8" type="application/x-mpegURL">
+</div><div class="player">
+<div class="player-headerAP">AP live choice 1</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/eca33834-e384-4dd3-ae79-fd84ff2cf337">
+<source src="https://streaming-a-806.cdn.nextologies.com/4M2gqURXdsxuPj01/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-
-    <!-- Spelare 13 -->
-    <div class="player">
-        <div class="player-headerAP">AP live choice 2</div>
-        <video controls muted loop>
-            <source src="https://streaming-a-806.cdn.nextologies.com/SCNek2Fa6TFmNF02/playlist.m3u8" type="application/x-mpegURL">
+</div><div class="player">
+<div class="player-headerAP">AP live choice 2</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/e76b80ab-b9f1-463c-ac33-1cf775b7268f">
+<source src="https://streaming-a-806.cdn.nextologies.com/SCNek2Fa6TFmNF02/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-        <!-- Spelare 14 -->
-    <div class="player">
-        <div class="player-headerAP">AP live choice 3</div>
-        <video controls muted loop>
-            <source src="https://streaming-a-806.cdn.nextologies.com/eZWEYDN1QYcHsM03/playlist.m3u8" type="application/x-mpegURL">
+</div><div class="player">
+<div class="player-headerAP">AP live choice 3</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/9d3f470e-98a8-4eae-8c65-256ef5ac8ebe">
+<source src="https://streaming-a-806.cdn.nextologies.com/eZWEYDN1QYcHsM03/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-		<!-- Spelare 14 -->
-    <div class="player">
-        <div class="player-headerAP">AP live choice 4</div>
-        <video controls muted loop>
-            <source src="https://streaming-a-806.cdn.nextologies.com/dd20476021b1fc5dd4fe0e50fabdc2bz/playlist.m3u8" type="application/x-mpegURL">
+</div><div class="player">
+<div class="player-headerAP">AP live choice 4</div>
+<video controls="" loop="" muted="" src="blob:https://exptool.github.io/3a8beaef-6ac3-4c26-a0c4-4ff678c2c5c3">
+<source src="https://streaming-a-806.cdn.nextologies.com/dd20476021b1fc5dd4fe0e50fabdc2bz/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-    </div>
-</div>
-
+</div><div class="player"><div class="player-headerAP">AP live choice 5</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap5"><source src="https://streaming-a-806.cdn.nextologies.com/b88e314b3e2b62b5756ba2fc95289f21/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div><div class="player"><div class="player-headerAP">AP live choice 6</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap6"><source src="https://streaming-a-806.cdn.nextologies.com/38dafadc68316650d32c7e974332e5b8/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var videoElements = document.querySelectorAll('video');
@@ -244,6 +219,4 @@
         });
     });
 </script>
-
-</body>
-</html>
+</body></html>
