--- a/index.html
+++ b/index.html
@@ -168,37 +168,48 @@
 <div class="main-header">
 	Förhandsvisning – livelinor från AP
 	</div>
-<div class="video-container"><div class="player">
+<div class="video-container">
+<!-- Spelare 11 -->
+<div class="player">
 <div class="player-headerAP">AP Direkt</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/44ba0347-a899-4298-9a53-7b674041c14a">
 <source src="https://streaming-a-806.cdn.nextologies.com/Ugg7ohj1KOol2v04/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-</div><div class="player">
+</div>
+<!-- Spelare 12 -->
+<div class="player">
 <div class="player-headerAP">AP live choice 1</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/eca33834-e384-4dd3-ae79-fd84ff2cf337">
 <source src="https://streaming-a-806.cdn.nextologies.com/4M2gqURXdsxuPj01/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-</div><div class="player">
+</div>
+<!-- Spelare 13 -->
+<div class="player">
 <div class="player-headerAP">AP live choice 2</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/e76b80ab-b9f1-463c-ac33-1cf775b7268f">
 <source src="https://streaming-a-806.cdn.nextologies.com/SCNek2Fa6TFmNF02/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-</div><div class="player">
+</div>
+<!-- Spelare 14 -->
+<div class="player">
 <div class="player-headerAP">AP live choice 3</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/9d3f470e-98a8-4eae-8c65-256ef5ac8ebe">
 <source src="https://streaming-a-806.cdn.nextologies.com/eZWEYDN1QYcHsM03/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-</div><div class="player">
+</div>
+<!-- Spelare 14 -->
+<div class="player">
 <div class="player-headerAP">AP live choice 4</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/3a8beaef-6ac3-4c26-a0c4-4ff678c2c5c3">
 <source src="https://streaming-a-806.cdn.nextologies.com/dd20476021b1fc5dd4fe0e50fabdc2bz/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
-</div><div class="player"><div class="player-headerAP">AP live choice 5</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap5"><source src="https://streaming-a-806.cdn.nextologies.com/b88e314b3e2b62b5756ba2fc95289f21/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div><div class="player"><div class="player-headerAP">AP live choice 6</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap6"><source src="https://streaming-a-806.cdn.nextologies.com/38dafadc68316650d32c7e974332e5b8/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div>
+</div>
+<div class="player"><div class="player-headerAP">AP live choice 5</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap5"><source src="https://streaming-a-806.cdn.nextologies.com/b88e314b3e2b62b5756ba2fc95289f21/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div><div class="video-container"><div class="player"><div class="player-headerAP">AP live choice 6</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap6"><source src="https://streaming-a-806.cdn.nextologies.com/38dafadc68316650d32c7e974332e5b8/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var videoElements = document.querySelectorAll('video');
