--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://exptool.github.io/explinor/favicon.png" rel="icon" type="image/png"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>TX-linor, AP och CNN</title>
-<script src="./TX-linor, AP och CNN_files/hls.js@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <style>
         body {
             margin: 0;
@@ -76,7 +76,7 @@
 </head>
 <body>
 <div class="main-header">
-    Förhandsvisning – Expressens TX-linor !
+    Förhandsvisning – Expressens TX-linor !!
 </div>
 <div class="video-container">
 <!-- Spelare 1 -->
