--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             padding: 2px;
         }
         .player {
-            width: 33.33%; /* Varje spelare tar upp hälften av bredden */
+            width: 25%; /* Varje spelare tar upp hälften av bredden */
             box-sizing: border-box;
             padding: 3px;
         }
@@ -76,7 +76,7 @@
 </head>
 <body>
 <div class="main-header">
-    Förhandsvisning – Expressens TX-linor !!
+    Förhandsvisning – Expressens TX-linor
 </div>
 <div class="video-container">
 <!-- Spelare 1 -->
@@ -209,7 +209,7 @@
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
-<div class="player"><div class="player-headerAP">AP live choice 5</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap5"><source src="https://streaming-a-806.cdn.nextologies.com/b88e314b3e2b62b5756ba2fc95289f21/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div><div class="video-container"><div class="player"><div class="player-headerAP">AP live choice 6</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap6"><source src="https://streaming-a-806.cdn.nextologies.com/38dafadc68316650d32c7e974332e5b8/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div>
+<div class="player"><div class="player-headerAP">AP live choice 5</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap5"><source src="https://streaming-a-806.cdn.nextologies.com/b88e314b3e2b62b5756ba2fc95289f21/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div><div class="player"><div class="player-headerAP">AP live choice 6</div><video controls="" loop="" muted="" src="blob:https://exptool.github.io/new-ap6"><source src="https://streaming-a-806.cdn.nextologies.com/38dafadc68316650d32c7e974332e5b8/playlist.m3u8" type="application/x-mpegURL"/>Din webbläsare stöder inte video-taggen.</video></div></div>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var videoElements = document.querySelectorAll('video');
