--- a/indexold250515.html
+++ b/indexold250515.html
@@ -83,7 +83,7 @@
 <div class="player">
 <div class="player-headerTX">TX1</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/f4eda704-44fa-4a39-a33c-653e03341c37">
-<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx1/playlist.m3u8" type="application/x-mpegURL"/>
+<source src="https://cdn0-03837-liveedge0.dna.contentdelivery.net/03837-liveedge0/smil:03837-tx1/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
@@ -91,7 +91,7 @@
 <div class="player">
 <div class="player-headerTX">TX2</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/5d8b8cdc-11c1-4220-9222-5d168c66a472">
-<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx2/playlist.m3u8" type="application/x-mpegURL"/>
+<source src="https://cdn0-03837-liveedge0.dna.contentdelivery.net/03837-liveedge0/smil:03837-tx2/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
@@ -99,7 +99,7 @@
 <div class="player">
 <div class="player-headerTX">TX3</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/79d42965-8432-4c36-a181-3b714d172601">
-<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx3/playlist.m3u8" type="application/x-mpegURL"/>
+<source src="https://cdn0-03837-liveedge0.dna.contentdelivery.net/03837-liveedge0/smil:03837-tx3/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
@@ -107,7 +107,7 @@
 <div class="player">
 <div class="player-headerTX">TX4</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/93c83125-6b40-42d9-a64a-fdc919aa832a">
-<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx4/playlist.m3u8" type="application/x-mpegURL"/>
+<source src="https://cdn0-03837-liveedge0.dna.contentdelivery.net/03837-liveedge0/smil:03837-tx4/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
@@ -115,7 +115,7 @@
 <div class="player">
 <div class="player-headerTX">TX5</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/c67d2784-8715-4fcb-88d6-d27110d291b4">
-<source src="https://cdn0-03837-liveedge0.dna.ip-only.net/03837-liveedge0/smil:03837-tx5/playlist.m3u8" type="application/x-mpegURL"/>
+<source src="https://cdn0-03837-liveedge0.dna.contentdelivery.net/03837-liveedge0/smil:03837-tx5/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
@@ -123,7 +123,7 @@
 <div class="player">
 <div class="player-headerTX">TX6</div>
 <video controls="" loop="" muted="" src="blob:https://exptool.github.io/4f7379f3-b20e-4cf4-a8f1-b40c3f4a9bfc">
-<source src="https://cdn0-03837-liveedge1.dna.ip-only.net/03837-liveedge1/smil:03837-tx6/playlist.m3u8" type="application/x-mpegURL"/>
+<source src="https://cdn0-03837-liveedge1.dna.contentdelivery.net/03837-liveedge1/smil:03837-tx6/playlist.m3u8" type="application/x-mpegURL"/>
             Din webbläsare stöder inte video-taggen.
         </video>
 </div>
